# wxr2md

./: .gitignore  LICENSE  README.md  pyproject.toml
wxr2md/: __main__.py  lib.py
