[tool.poetry]
name = "wxr2md"
version = "0.1.0"
description = "Converter for WordPress eXport RSS (WXR) files into Markdown files"
authors = ["Dion Susanto <nikolasdion@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
